--- a/backend/recipe_share_api/recipe_share_api.csproj
+++ b/backend/recipe_share_api/recipe_share_api.csproj
@@ -13,4 +13,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Files\RecipeShare_0.1.1.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\RecipeShare_0.1.6.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
