--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-router": "^1.85.5",
     "@types/lodash": "^4.17.13",
     "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
     "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "@tanstack/router-cli": "^1.85.3",
     "@tanstack/router-devtools": "^1.85.5",
     "@tanstack/router-plugin": "^1.85.3",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
